--- a/webapi/src/main/resources/application.conf
+++ b/webapi/src/main/resources/application.conf
@@ -150,8 +150,8 @@ app {
     }
 
     triplestore {
-        dbtype = "fuseki"
-        // dbtype = "graphdb"
+        // dbtype = "fuseki"
+        dbtype = "graphdb"
         // dbtype = "embedded-jena-tdb"
         // dbtype = "sesame"
         // dbtype = "embedded-jena-graphdb"
@@ -314,6 +314,20 @@ app {
                 data = "http://www.knora.org/data/anything"
                 visibleInGUI = true
                 name = "Anything Test Project"
+            }
+            {
+                project = "http://data.knora.org/projects/RTIproject"
+                ontology = "http://www.knora.org/ontology/PTM"
+                data = "http://www.knora.org/data/PTM"
+                visibleInGUI = true
+                name = "PTM Test Project"
+            }
+            {
+                project = "http://data.knora.org/projects/RTIproject"
+                ontology = "http://www.knora.org/ontology/webPTM"
+                data = "http://www.knora.org/data/webPTM"
+                visibleInGUI = true
+                name = "webPTM Test Project"
             }
         ]
 
